--- a/HW2/package.json
+++ b/HW2/package.json
@@ -24,6 +24,7 @@
     "core-js": "^3.18.1",
     "d3": "^6.6.2",
     "d3-3d": "^0.1.2",
+    "d3-sankey": "^0.12.3",
     "gltf-webpack-loader": "^1.0.6",
     "pinia": "^2.0.13",
     "stats.js": "^0.17.0",
